--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "@webzlodimir/vue-bottom-sheet",
   "version": "1.3.0",
   "description": "",
+  "paths": {
+    "source": "src",
+    "destination": "dist",
+    "example": "example"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/webzlodimir/vue-bottom-sheet.git"
@@ -34,44 +39,55 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "serve": "vue-cli-service serve dev/serve.js",
-    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
-    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
-    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife",
-    "size": "size-limit"
+    "build": "rollup -c --environment production",
+    "build:css": "postcss src/style.css -o dist/vue3-perfect-scrollbar.min.css --env production && postcss src/style.css -o dist/vue3-perfect-scrollbar.css",
+    "dev": "webpack-dev-server --config webpack.config.js",
+    "test": "yarn jest",
+    "test:dev": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "hammerjs": "^2.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-replace": "^2.3.4",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@size-limit/preset-app": "^4.10.0",
-    "@vue/cli-plugin-babel": "^4.5.10",
-    "@vue/cli-service": "^4.5.10",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.4.12",
+    "babel-loader": "^8.0.2",
     "cross-env": "^7.0.3",
+    "css-loader": "^1.0.0",
+    "eslint": "^7.12.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^7.1.0",
+    "eslint-webpack-plugin": "^2.1.0",
     "minimist": "^1.2.5",
-    "rollup": "^2.36.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^5.1.9",
-    "sass": "^1.32.8",
-    "sass-loader": "^8.0.2",
+    "postcss": "^8.1.4",
+    "postcss-cli": "^8.1.0",
+    "rollup": "^0.65.2",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-uglify": "^5.0.2",
+    "sass": "^1.55.0",
+    "sass-loader": "^10.0.4",
     "size-limit": "^4.10.1",
-    "vue": "^2.6.12",
+    "style-loader": "^0.23.0",
+    "ts-loader": "^8.0.7",
+    "typescript": "^4.0.3",
+    "vue": "^3.0.2",
     "vue-color": "^2.8.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-jest": "^5.0.0-alpha.5",
+    "vue-loader": "^16.0.0-beta.8",
+    "vue-style-loader": "^4.1.2",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7"
   },
-  "peerDependencies": {
-    "vue": "^2.6.12"
-  },
-  "engines": {
-    "node": ">=12"
+  "volta": {
+    "node": "10.24.1"
   }
 }
